# MUTO-RS-CHOREGRAGPHY

./: .dockerignore  .gitignore  GUIDE_DOCKER_MUTO_ADAPTATION.md  Makefile  README.md  a.out  dance_demo.py  dance_follower.py  dance_leader.py  data.json  docker-compose.yaml  launch_dance_sync.sh  ok.cpp
architectures/: MUTO-RS CHOREGRAPHY.drawio
assets/: README.md
assets/json/: Your Idol - Official Song Clip - KPop Demon Hunters - Sony Animation.json  bloody_brazil_ultra_slowed.json  choreo_himra_template.json  data.json  tenzoo_bloody_brazil_beats.json
config/: .env.example  README.md
doc/: DOCKER_HUMBLE_BASIQUE.md  DOCUMENTATION.md  README.md
docker/: Dockerfile  README.md  entrypoint.sh  run_docker.sh
script/: demo_muto_rs_synchronization.sh
scripts/: README.md  decodeur.py  setup_container_launcher_deps.sh  setup_follower_muto_rs.sh  setup_host_multimachine.sh  setup_leader_muto_rs.sh
src/: README.md
src/checkbatterylevel/: CMakeLists.txt  package.xml
src/checkbatterylevel/include/checkbatterylevel/: batterylevel.hpp
src/checkbatterylevel/src/: batterylevel.cpp
src/location/: CMakeLists.txt  package.xml
src/location/include/location/: compute_offset_goal.hpp  get_leader_pose.hpp
src/location/src/: compute_offset_goal.cpp  get_leader_pose.cpp
src/muto_rs_bt/: CMakeLists.txt  package.xml
src/muto_rs_bt/src/: get_leader_pose.cpp
src/muto_rs_coordination/: CMakeLists.txt  package.xml
src/muto_rs_coordination/src/: follower_goal_node.cpp
src/muto_rs_nav/behavior_trees/: leader_only_actions.xml  nav_to_pose.xml
src/muto_rs_nav/launch/: nav2_bringup.launch.py
src/muto_rs_nav/maps/: electronics_room.pgm  electronics_room.yaml
src/muto_rs_nav/params/: nav2_params.yaml
src/muto_rs_nav_choregraphy/launch/: nav2_bringup.launch.py
src/muto_rs_nav_choregraphy/params/: nav2_params.yaml
src/muto_rs_nav_leader/behavior_trees/: nav_leader.xml
src/muto_rs_nav_leader/launch/: nav2_bringup.launch.py
src/muto_rs_nav_leader/maps/: electronics_room.pgm  electronics_room.yaml
src/muto_rs_nav_leader/params/: nav2_params.yaml
src/muto_rs_nav_leader_follower/: README.md
src/muto_rs_nav_leader_follower/behavior_trees/: nav_leader_follower.xml
src/muto_rs_nav_leader_follower/launch/: nav2_bringup.launch.py
src/muto_rs_nav_leader_follower/maps/: electronics_room.yaml
src/muto_rs_nav_leader_follower/params/: nav2_params.yaml
src/muto_rs_synchronization/: package.xml  setup.cfg  setup.py
src/muto_rs_synchronization/launch/: AMAZING-ROBOT-DANCE GROUP-TECHNICIANZ.json.json  choreo_himra_template.json  dance_choreography.launch.py  tenzoo_bloody_brazil_beats.json
src/muto_rs_synchronization/muto_rs_synchronization/: dance_follower.py  dance_leader.py
src/mutors_nav/bt_trees/: follow_leader.xml
src/pkg_battery_level/: CMakeLists.txt  package.xml
src/pkg_battery_level/include/pkg_battery_level/: batterylevel.hpp
src/pkg_battery_level/src/: batterylevel.cpp
src/pkg_get_position/: CMakeLists.txt  package.xml
src/pkg_get_position/include/pkg_get_position/: get_position.hpp
src/pkg_get_position/src/: get_position.cpp
src/pkg_leader_bridge/: CMakeLists.txt  package.xml
src/pkg_leader_bridge/src/: leader_bridge.cpp
src/pkg_new_position/: CMakeLists.txt  package.xml
src/pkg_new_position/include/pkg_new_position/: new_position.hpp
src/pkg_new_position/src/: new_position.cpp
